# AudioRecordingEncode

./: .gitignore  README.md  gradle.properties  nexus_upload.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/org/xellossryan/akatean/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  mp3lame_encoder.c  native-lib.c
app/src/main/cpp/armeabi/include/lame/: lame.h
app/src/main/cpp/armeabi/lib/: libmp3lame.la  libmp3lame.so.0.0.0
app/src/main/cpp/include/: allneeded.h  mp3lame_encoder.h
app/src/main/cpp/x86/lib/: libmp3lame.so.0.0.0
app/src/main/java/org/xellossryan/abstractlayer/: AbstractEncoderLayer.java  EncoderAbstractLayer.java  EncoderLayer.java  MP3LameProxy.java
app/src/main/java/org/xellossryan/akatean/: MainActivity.java  RecordConstants.java
app/src/main/java/org/xellossryan/lame/: MP3Lame.java  MP3LameProxy.java  ParameterBuilder.java
app/src/main/java/org/xellossryan/log/: L.java
app/src/main/java/org/xellossryan/output/: FrameEncodeQueue.java
app/src/main/java/org/xellossryan/recorder/: AudioInput.java  AudioOutput.java  EncodeArguments.java
app/src/main/java/org/xellossryan/util/: TypeCast.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/org/xellossryan/akatean/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
lamelibrary/: build.gradle  proguard-rules.pro
lamelibrary/src/androidTest/java/org/xellossryan/lamelibrary/: ExampleInstrumentedTest.java
lamelibrary/src/main/: AndroidManifest.xml
lamelibrary/src/main/cpp/: ctools.c  mp3lame_encoder.c
lamelibrary/src/main/cpp/armeabi/lib/: libmp3lame.so.0
lamelibrary/src/main/cpp/include/: allneeded.h  ctools.h  mp3lame_encoder.h
lamelibrary/src/main/cpp/x86/include/lame/: lame.h
lamelibrary/src/main/cpp/x86/lib/: libmp3lame.la
lamelibrary/src/main/java/org/xellossryan/abstractlayer/: PCMFormat.java
lamelibrary/src/main/java/org/xellossryan/lame/: MP3LameProxy.java  (+1 more)
lamelibrary/src/main/res/values/: strings.xml
repo/org/xellossryan/lameaudio/lameaudio/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
repo/org/xellossryan/lameaudio/lameaudio/1.0.10/: lameaudio-1.0.10-sources.jar.md5  lameaudio-1.0.10-sources.jar.sha1  lameaudio-1.0.10.aar  lameaudio-1.0.10.aar.md5  lameaudio-1.0.10.aar.sha1  lameaudio-1.0.10.pom  lameaudio-1.0.10.pom.md5  lameaudio-1.0.10.pom.sha1
repo/org/xellossryan/lameaudio/lameaudio/1.0.8/: lameaudio-1.0.8-sources.jar.md5  lameaudio-1.0.8-sources.jar.sha1  lameaudio-1.0.8.aar  lameaudio-1.0.8.aar.md5  lameaudio-1.0.8.aar.sha1  lameaudio-1.0.8.pom  lameaudio-1.0.8.pom.md5  lameaudio-1.0.8.pom.sha1
speexdsplibrary/: AndroidManifest.xml  build.gradle
speexdsplibrary/src/main/cpp/: CMakeLists.txt  speex_utils.c  speex_utils.h
speexdsplibrary/src/main/cpp/speexdsp_arm/lib/: libspeexdsp.la  libspeexdsp.so.1.5.0
speexdsplibrary/src/main/cpp/speexdsp_arm/lib/pkgconfig/: speexdsp.pc
speexdsplibrary/src/main/cpp/speexdsp_x86/lib/: libspeexdsp.la  libspeexdsp.so.1  libspeexdsp.so.1.5.0
speexdsplibrary/src/main/cpp/speexdsp_x86/lib/pkgconfig/: speexdsp.pc
speexdsplibrary/src/main/res/values/: strings.xml
(+9 files in other folders)
